--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -1,18 +1,15 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-  <title>Netlify Content Manager</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Include the styles for the Netlify CMS UI, after your own styles -->
-  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.css" />
-  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <title>Content Manager</title>
+  <!-- Include the stylesheets from your site here -->
+  <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^0.4.5/dist/cms.css" />
+  <!-- Include a CMS specific stylesheet here -->
 </head>
 <body>
-<!-- Include the script that builds the page and powers Netlify CMS -->
-<script src="https://unpkg.com/netlify-cms@^1.0.0/dist/cms.js"></script>
+  <script src="https://unpkg.com/netlify-cms@^0.4.5/dist/cms.js"></script>
 </body>
 </html>
-
