--- a/static/admin/index.html
+++ b/static/admin/index.html
@@ -8,6 +8,7 @@
   <!-- Include the stylesheets from your site here -->
   <link rel="stylesheet" href="https://unpkg.com/netlify-cms@^0.4.5/dist/cms.css" />
   <!-- Include a CMS specific stylesheet here -->
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
   <script src="https://unpkg.com/netlify-cms@^0.4.5/dist/cms.js"></script>
