--- a/app.html
+++ b/app.html
@@ -13,5 +13,7 @@
   </head>
   <body {{ BODY_ATTRS }}>
     {{ APP }}
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script>
+    <script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us1.list-manage.com","uuid":"f2095912777fe1bab6fae1135","lid":"6de7eec27a"}) })</script>
   </body>
 </html>
